# aerial_flower_counting

./: .gitignore  .kedro.yml  .pre-commit-config.yaml  HISTORY.md  README.md  add_feature_output_to_model.py  create_image_manifest.py  fix_labels.py  infer_on_images.py  kedro_cli.py  pyproject.toml  random_data_picker.py  setup.cfg  submit_training_job.sh
.ipython/profile_default/startup/: 00-kedro-init.py
conf/base/: catalog.yml  globals.yml  logging.yml  parameters.yml
conf/base/parameters/: prepare_data.yml
conf/base/pipelines/annotation_reupload/: catalog.yml  parameters.yml
conf/base/pipelines/auto_annotation/: catalog.yml  parameters.yml
conf/base/pipelines/build_tfrecords_patches/: parameters.yml
conf/base/pipelines/build_tfrecords_points/: catalog.yml  parameters.yml
conf/base/pipelines/count_plots/: catalog.yml  parameters.yml
conf/base/pipelines/count_plots_v2/: catalog.yml  parameters.yml
conf/base/pipelines/data_cleaning/: catalog.yml  parameters.yml
conf/base/pipelines/eda/: catalog.yml  parameters.yml
conf/base/pipelines/model_data_load/: catalog.yml  parameters.yml
conf/base/pipelines/model_evaluation/: catalog.yml  parameters.yml
conf/base/pipelines/model_preprocess/: parameters.yml
conf/base/pipelines/model_training/: catalog.yml  parameters.yml
conf/categorical/: parameters.yml
conf/categorical/model_training/: catalog.yml  parameters.yml
conf/hpg/: globals.yml  parameters.yml
conf/sapelo/: globals.yml
data/01_raw/: 2023 PT Field.xlsx  2023_ground_truth_counts.xlsx  IHF_NILs_Genotype_Information.xlsx  camera_config.yml  empty_plots_j2.csv  field_config_j1.yml  field_config_j2.yml  field_config_tifton_bottom.yml  field_config_tifton_top.yml  ground_truth_counts.xlsx  ground_truth_heights.xlsx
data/01_raw/metashape_cameras/: 2023-07-27_cameras.xml  2023-08-01_cameras.xml  2023-08-03_cameras.xml  2023-08-07_cameras.xml  2023-08-10_cameras.xml  2023-08-14_cameras.xml  2023-08-18_cameras.xml  2023-08-21_cameras.xml  2023-08-24_cameras.xml  2023-08-28_cameras.xml  2023-09-01_cameras.xml  2023-09-05_cameras.xml  2023-09-07_cameras.xml  2023-09-12_cameras.xml  2023-09-14_cameras.xml  2023-09-18_cameras.xml  2023-09-21_cameras.xml  2023-09-28_cameras.xml  2023-10-04_cameras.xml  2023-10-11_cameras.xml  2023-11-17_cameras.xml
data/01_raw/plot_boundaries/bottom/: 2023-08-14_plot_borders_bottom.dbf  2023-08-14_plot_borders_bottom.shp  2023-08-14_plot_borders_bottom.shx  2023-08-14_plot_sampling_locations_bottom.dbf  2023-08-14_plot_sampling_locations_bottom.shp  2023-08-14_plot_sampling_locations_bottom.shx  2023-09-01_plot_borders_bottom.dbf  2023-09-01_plot_borders_bottom.shp  2023-09-01_plot_borders_bottom.shx  2023-09-01_plot_sampling_locations_bottom.shp  2023-09-01_plot_sampling_locations_bottom.shx
data/01_raw/plot_boundaries/middle/: 2023-08-14_plot_sampling_locations_middle.dbf  2023-08-14_plot_sampling_locations_middle.shp  2023-08-14_plot_sampling_locations_middle.shx  (+7 more)
data/01_raw/qualitative_examples/: 2021-09-03_plot_159_shadows.tif  2021-09-17_plot_1073_pima.tif  2021-09-17_plot_509_occluded.tif  2021-09-17_plot_531_pollinated.tif  2021-09-24_plot_84_stitching_artifacts.tif  2021-10-01_plot_1595_weeds.tif  2021-10-01_plot_57_occluded2.tif  2021-10-22_plot_970_boll_confusion.tif
docs/source/: conf.py  index.rst
scripts/: clean_artifacts.sh  package_artifacts.sh  submit_analysis_job.sh  submit_data_preparation_job.sh  submit_training_job.sh  submit_training_job_a100.sh
src/: setup.py
src/cotton_counter/: __init__.py  cvat_utils.py  hooks.py  logging_config.py  merge_tfrecords.py  patch_utils.py  pipeline.py  pipeline_registry.py  run.py  tfrecords_utils.py  type_helpers.py
src/cotton_counter/data_sets/: __init__.py  multi_file_data_set.py  parallel_partitioned_data_set.py  raster_data_set.py  shapefile_data_set.py  tf_records_data_set.py
src/cotton_counter/model/: callbacks.py  counting_model.py  dataset_io.py  density_maps.py  filters.py  hard_negatives.py  inference.py  load_from_dataset.py  losses.py  metrics.py  patches.py  records.py  sa_net.py  visualization.py
src/cotton_counter/pipelines/: camera_utils.py  common.py
src/tests/: test_run.py
src/tests/model/: test_counting_model.py  test_dataset_io.py  test_inference.py
src/yolov8_train/: detection_model_with_features.py  main.py  yolov8_wandb.py
(+95 files in other folders)
