[tool.poetry]
name = "cotton_counter"
version = "0.2"
description = "HTP project for counting cotton plant organs from aerial imagery."
authors = ["Daniel Petti <djpetti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
kedro = "^0.16.6"
pycvat = {path = "pycvat", develop = false}
loguru = "^0.5.2"
seaborn = "^0.11.1"
numpy = ">=1.16"
pandas = "^1.1.1"
pyarrow = "^1.0.1"
tensorflow = "~2.5.0"
opencv-python = "^4.4.0"
tabulate = "^0.8.7"
Pillow = "^7.2.0"
tenacity = "^6.2.0"
tensorflow-addons = "^0.13.0"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest_mock = "^3.3.1"
pytest_cov = "^2.10.1"
pytest_black = "^0.3.11"
pytest_flake8 = "^1.0.6"
kedro-viz = "^3.4.0"
pytest_snapshot = "^0.4.2"
pyyaml = "^5.3.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.0"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
